# RubbleEngine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/gfx/: Camera.h  Shader.cpp  Shader.h
engine/src/project/: Level.cpp  Level.h  Project.cpp  Project.h
runtime/: CMakeLists.txt
runtime/src/: Window.cpp  Window.h  main.cpp
shaders/: basic.frag  basic.vert
